<resources>
    <string name="app_name">Census</string>
    <string name="ErrorMsgAdd">Error al registrar el dato</string>
    <string name="ErrorMsgUpdate">Error al actualizar el dato</string>
    <string name="ErrorMsgRemove">Error al eliminar el dato</string>
    <string name="ErrorMsgGetAll">Error al obtener la lista de datos</string>
    <string name="ErrorMsgGetById">Error al obtener el dato específico</string>
    <string name="MsgDataNotFound">El dato no fue encontrado</string>
    <string name="btnPersonText_main">Agregar persona</string>
    <string name="btnPeopleText_main">Listar personas</string>
    <string name="TextID">Identificador *</string>
    <string name="TextName">Nombre *</string>
    <string name="TextFLastName">Primer apellido *</string>
    <string name="TextSLastName">Segundo apellido *</string>
    <string name="TextEmail">Correo *</string>
    <string name="TextPhone">Teléfono *</string>
    <string name="TextPhoto">Foto *</string>
    <string name="TextProvince">Provincia *</string>
    <string name="TextState">Cantón *</string>
    <string name="TextDistrict">Distrito *</string>
    <string name="TextAddress">Dirección *</string>
    <string name="TextBirthday">Fecha Nacimiento *</string>
    <string name="TextSave_menu">Guardar</string>
    <string name="TextDelete_menu">Eliminar</string>
    <string name="TextCancel_menu">Cancelar</string>
    <string name="MsgDuplicateDate">No se permiten datos duplicados</string>
    <string name="MsgSaveSuccess">La información se guardó con éxito</string>
    <string name="MsgDeleteSuccess">La información se eliminó con éxito.</string>
    <string name="TextYes">Sí</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Pregunta...</string>
    <string name="TextSaveActionQuestion">Desea guardar la información?</string>
    <string name="TextDeleteActionQuestion">Desea eliminar la información?</string>
</resources>